tests/snapshots/snapshot_tests__random_board_snapshot_158.snap
---
source: tests/snapshot_tests.rs
expression: "(minions, recording)"
---
- ? idx: 1
    version: 1
  : IckyImp
  ? idx: 2
    version: 1
  : LeechingFelhound
  ? idx: 3
    version: 1
  : AnnoyOModule
  ? idx: 4
    version: 1
  : RendleTheMistermind
  ? idx: 5
    version: 1
  : Voidlord
  ? idx: 6
    version: 1
  : Dreadbeard
  ? idx: 7
    version: 1
  : CaveHydra
  ? idx: 8
    version: 1
  : Thorncaller
  ? idx: 9
    version: 1
  : DeepSeaAngler
  ? idx: 10
    version: 1
  : DiabloLordOfTerror
  ? idx: 11
    version: 1
  : SouthseaCaptain
  ? idx: 12
    version: 1
  : AmberGuardian
  ? idx: 13
    version: 1
  : LilRag
  ? idx: 14
    version: 1
  : SilentSwimmer
  ? idx: 15
    version: 1
  : Imp
  ? idx: 16
    version: 1
  : Imp
- - ProposeAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 3
      source:
        idx: 2
        version: 1
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 3
      source:
        idx: 5
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 2
              version: 1
            defender:
              idx: 5
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 7
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 2
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 2
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Death:
          event:
            minion:
              idx: 2
              version: 1
            source:
              idx: 4294967295
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - AfterAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 8
        version: 1
      amount: 1
      source:
        idx: 1
        version: 1
  - TakeDamage:
      target:
        idx: 1
        version: 1
      amount: 3
      source:
        idx: 8
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 1
              version: 1
            defender:
              idx: 8
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 7
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 1
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 1
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Death:
          event:
            minion:
              idx: 1
              version: 1
            source:
              idx: 4294967295
              version: 1
          ass_handler:
            minion:
              idx: 1
              version: 1
  - Summon:
      minion:
        idx: 15
        version: 1
      position:
        player_id: Bottom
        index: 0
      source:
        idx: 1
        version: 1
  - Summon:
      minion:
        idx: 16
        version: 1
      position:
        player_id: Bottom
        index: 0
      source:
        idx: 1
        version: 1
  - AfterAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 4
      source:
        idx: 4
        version: 1
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 3
      source:
        idx: 5
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 4
              version: 1
            defender:
              idx: 5
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 7
              version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 15
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 15
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 1
      source:
        idx: 15
        version: 1
  - TakeDamage:
      target:
        idx: 15
        version: 1
      amount: 4
      source:
        idx: 10
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 15
              version: 1
            defender:
              idx: 10
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 7
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 15
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 15
        version: 1
  - AfterAttack:
      attacker:
        idx: 15
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 4
      source:
        idx: 6
        version: 1
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 3
      source:
        idx: 5
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 6
              version: 1
            defender:
              idx: 5
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 7
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 5
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 5
        version: 1
  - AfterAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 2
      source:
        idx: 3
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 3
              version: 1
            defender:
              idx: 10
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 7
              version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 3
      source:
        idx: 8
        version: 1
  - TakeDamage:
      target:
        idx: 8
        version: 1
      amount: 2
      source:
        idx: 3
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 8
              version: 1
            defender:
              idx: 3
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 7
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 8
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 8
        version: 1
  - AfterAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 2
      source:
        idx: 7
        version: 1
  - TakeDamage:
      target:
        idx: 7
        version: 1
      amount: 5
      source:
        idx: 14
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 7
              version: 1
            defender:
              idx: 14
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 7
              version: 1
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 2
      source:
        idx: 7
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 12
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 12
        version: 1
  - Death:
      minion:
        idx: 7
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 7
        version: 1
  - AfterAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 11
        version: 1
      amount: 4
      source:
        idx: 10
        version: 1
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 3
      source:
        idx: 11
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 10
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 10
        version: 1
  - Death:
      minion:
        idx: 11
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 11
        version: 1
  - AfterAttack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 2
      source:
        idx: 9
        version: 1
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 4
      source:
        idx: 4
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 4
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 4
        version: 1
  - Death:
      minion:
        idx: 9
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 9
        version: 1
  - AfterAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 5
      source:
        idx: 14
        version: 1
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 2
      source:
        idx: 3
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 14
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 14
        version: 1
  - Death:
      minion:
        idx: 3
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 3
        version: 1
  - AfterAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 6
      source:
        idx: 13
        version: 1
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 4
      source:
        idx: 6
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 6
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 6
        version: 1
  - AfterAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - End: BottomWin

